# gt

gto_solver/: .gitignore  CLAUDE.md  HANDOFF.md  config.json  package-lock.json  package.json  pyproject.toml  requirements.txt
gto_solver/.claude/: settings.local.json
gto_solver/data/seed/: gto_data.csv  gto_data_blind_defense_9max.csv  gto_data_postflop_cbet_6max.csv  gto_data_postflop_cbet_9max.csv  gto_data_rfi_6max.csv  gto_data_rfi_9max.csv  gto_data_vs_3bet_6max.csv  gto_data_vs_3bet_9max.csv  gto_data_vs_rfi_6max.csv  gto_data_vs_rfi_9max.csv
gto_solver/data/sqlite/: gto_solver.db
gto_solver/docs/: live-test-checklist.md  prd.md  project-review.md
gto_solver/openspec/: config.yaml
gto_solver/scripts/: calibrate_roi.py  config_cards.py  detect_cards.py  generate_phase3_data.py  generate_preflop_data.py
gto_solver/src/: __init__.py
gto_solver/src/capture/: __init__.py  screen_capture.py  window_manager.py
gto_solver/src/controller/: __init__.py  app.py
gto_solver/src/display/: __init__.py  hud.py
gto_solver/src/gto/: __init__.py  api.py  bootstrap.py  codec.py  engine.py  importer.py  models.py  store.py
gto_solver/src/parser/: __init__.py  game_state_bridge.py  models.py  seat_assigner.py
gto_solver/src/recognition/: __init__.py  action_detector.py  card_detector.py  card_recognizer.py  card_templates.py  multi_frame.py  number_reader.py  seat_detector.py
gto_solver/src/roi/: __init__.py  calibrate.py  roi_config.py  roi_manager.py
gto_solver/tests/: __init__.py  conftest.py  test_api.py  test_hud.py  test_importer.py  test_pipeline.py
(+10 files in other folders)
