[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "gto_solver"
version = "0.1.0"
description = "WePoker real-time GTO strategy assistant — screen analysis + offline solver"
readme = "CLAUDE.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "opencv-python>=4.8.0",
    "numpy>=1.25.0",
    "pyautogui>=0.9.54",
    "pillow>=10.0.0",
    "pywin32>=306",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
